styles/phenotypes.css
/* ... */
@media (min-width: 1200px) {
  .Checkbox--medium-lg {
    font-size: 14px;
    line-height: 21px;
    letter-spacing: 0px;
    font-weight: normal;
    padding-left: 23px; }
    .Checkbox--medium-lg .Checkbox__indicator {
      background-position: 1px 2px;
      background-size: 10px 9px;
      height: 16px;
      top: 1px;
      width: 16px; }
  .Checkbox--small-lg {
    font-size: 12px;
    line-height: 18px;
    letter-spacing: 0px;
    font-weight: normal;
    padding-left: 21px; }
    .Checkbox--small-lg .Checkbox__indicator {
      background-position: 1px 1px;
      background-size: 8px 8px;
      height: 14px;
      top: 1px;
      width: 14px; }
  .Checkbox--large-lg {
    font-size: 18px;
    line-height: 27px;
    letter-spacing: 0px;
    font-weight: normal;
    padding-left: 32px; }
    .Checkbox--large-lg .Checkbox__indicator {
      background-position: 2px 3px;
      background-size: 14px 11px;
      height: 21px;
      top: 2px;
      width: 21px; } }

@media (min-width: 1500px) {
  .Checkbox--medium-xl {
    font-size: 14px;
    line-height: 21px;
    letter-spacing: 0px;
    font-weight: normal;
    padding-left: 23px; }
    .Checkbox--medium-xl .Checkbox__indicator {
      background-position: 1px 2px;
      background-size: 10px 9px;
      height: 16px;
      top: 1px;
      width: 16px; }
  .Checkbox--small-xl {
    font-size: 12px;
    line-height: 18px;
    letter-spacing: 0px;
    font-weight: normal;
    padding-left: 21px; }
    .Checkbox--small-xl .Checkbox__indicator {
      background-position: 1px 1px;
      background-size: 8px 8px;
      height: 14px;
      top: 1px;
      width: 14px; }
  .Checkbox--large-xl {
    font-size: 18px;
    line-height: 27px;
    letter-spacing: 0px;
    font-weight: normal;
    padding-left: 32px; }
    .Checkbox--large-xl .Checkbox__indicator {
      background-position: 2px 3px;
      background-size: 14px 11px;
      height: 21px;
      top: 2px;
      width: 21px; } }

.Message {
  background-color: #eee;
  border-radius: 3px;
  padding: 16px; }

.Message--success {
  background-color: #03ab8c;
  color: #fff; }

.Message--info {
  background-color: #853b94;
  color: #fff; }

.Message--danger {
  background-color: #f04d5d;
  color: #fff; }

.Radio {
  font-size: 14px;
  line-height: 21px;
  letter-spacing: 0px;
  font-weight: normal;
  padding-left: 21px;
  display: inline-block;
  margin: 0;
  position: relative; }
  .Radio .Radio__indicator {
    height: 16px;
    top: 1px;
    width: 16px; }
    .Radio .Radio__indicator::after {
      height: 6px;
      left: 3px;
      top: 3px;
      width: 6px; }

.Radio__input {
  opacity: 0;
  position: absolute;
  z-index: -1; }
  .Radio__input:focus ~ .Radio__indicator {
    border-color: #7feaff;
    box-shadow: 0 0 11px rgba(127, 234, 255, 0.41); }
  .Radio__input:active ~ .Radio__indicator {
    background-color: #f9f9f9;
    border-color: #c1c1c1; }
  .Radio__input:checked ~ .Radio__indicator {
    background-color: #232323;
    border-color: #232323;
    color: #fff; }
    .Radio__input:checked ~ .Radio__indicator::after {
      display: block; }
  .Radio__input:checked:focus ~ .Radio__indicator {
    border-color: #232323;
    box-shadow: 0 0 0 2px rgba(22, 184, 224, 0.24); }
  .Radio__input:checked:active:not(:disabled) ~ .Radio__indicator {
    background-color: #232323;
    border-color: #232323; }
    .Radio__input:checked:active:not(:disabled) ~ .Radio__indicator::after {
      opacity: 0.54; }
  .Radio__input:disabled ~ .Radio__indicator,
  .Radio__input:disabled:active ~ .Radio__indicator, .Radio__input:disabled:checked:active {
    background-color: #eee;
    border-color: #eee; }
  .Radio__input:disabled:checked ~ .Radio__indicator::after,
  .Radio__input:disabled:checked:active ~ .Radio__indicator::after {
    background-color: #c1c1c1; }
  .Radio__input:disabled ~ .Radio__label {
    color: rgba(0, 0, 0, 0.54); }

.Radio__indicator {
  background-color: #fff;
  border: 2px solid #dbdbdb;
  border-radius: 50%;
  left: 0;
  pointer-events: none;
  position: absolute;
  user-select: none; }
  .Radio__indicator::after {
    background-color: #fff;
    border-radius: 50%;
    content: '';
    display: none;
    position: absolute; }

.Radio--is-disabled {
  cursor: not-allowed; }

.Radio--small {
  font-size: 12px;
  line-height: 18px;
  letter-spacing: 0px;
  font-weight: normal;
  padding-left: 19px; }
  .Radio--small .Radio__indicator {
    height: 14px;
    top: 1px;
    width: 14px; }
    .Radio--small .Radio__indicator::after {
      height: 6px;
      left: 2px;
      top: 2px;
      width: 6px; }

.Radio--medium {
  font-size: 14px;
  line-height: 21px;
  letter-spacing: 0px;
  font-weight: normal;
  padding-left: 21px; }
  .Radio--medium .Radio__indicator {
    height: 16px;
    top: 1px;
    width: 16px; }
    .Radio--medium .Radio__indicator::after {
      height: 6px;
      left: 3px;
      top: 3px;
      width: 6px; }

.Radio--large {
  font-size: 18px;
  line-height: 27px;
  letter-spacing: 0px;
  font-weight: normal;
  padding-left: 28px; }
  .Radio--large .Radio__indicator {
    height: 21px;
    top: 2px;
    width: 21px; }
    .Radio--large .Radio__indicator::after {
      height: 7px;
      left: 5px;
      top: 5px;
      width: 7px; }
/* ... */

